Dummy_Package_for_scratch_org/main/default/objects/Git_Repository__c/Git_Repository__c.object-meta.xml
<CustomObject>
    <description>Connection to a git repository like github.com or bitbuckets.org</description>
    <label>Git Repository</label>
    <nameField>
        <label>Git Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>