Dummy_Package_for_scratch_org/main/default/objects/Git_Repository__c/fields/Branch_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Branch_Base_URL__c</fullName>
    <description>This field enables Copado to create a link to the Git branches&apos; information on your provider&apos;s end.</description>
    <inlineHelpText>Base URL of your Repository branches, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/tree/</inlineHelpText>
    <label>Branch Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>