Dummy_Package_for_scratch_org/main/default/objects/Git_Repository__c/fields/Commit_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Commit_Base_URL__c</fullName>
    <description>This field enables Copado to create a link to the Git commits&apos; information on your provider&apos;s end.</description>
    <inlineHelpText>Base URL of your Repository commits, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/commit/</inlineHelpText>
    <label>Commit Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>