Dummy_Package_for_scratch_org/main/default/objects/Git_Repository__c/fields/Pull_Request_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_Base_URL__c</fullName>
    <inlineHelpText>Base URL of your Repository, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/ https://bitbucket.org/[COMPANY]/[REPOSITORY]/ https://gitlab.org/[COMPANY]/[REPOSITORY]/</inlineHelpText>
    <label>Pull Request Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>