Dummy_Package_for_scratch_org/main/default/objects/Git_Repository__c/fields/Tag_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Tag_Base_URL__c</fullName>
    <inlineHelpText>Base URL of your Repository, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/releases/tag/</inlineHelpText>
    <label>Tag Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>