Dummy_Package_for_scratch_org/main/default/objects/Git_Repository__c/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <description>HTTPS or SSH URL to connect to the Git Repository.</description>
    <inlineHelpText>HTTPS or SSH URL to connect to the Git Repository.</inlineHelpText>
    <label>URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>